@@ -3,6 +3,7 @@ package io.zucchiniui.backend.feature.views;
 import io.zucchiniui.backend.feature.dao.FeatureDAO;
 import io.zucchiniui.backend.feature.domain.Feature;
 import io.zucchiniui.backend.feature.domain.FeatureQuery;
+import io.zucchiniui.backend.scenario.dao.ScenarioQuery;
 import io.zucchiniui.backend.scenario.views.ScenarioStats;
 import io.zucchiniui.backend.scenario.views.ScenarioViewAccess;
 import io.zucchiniui.backend.shared.domain.TagSelection;
@@ -14,8 +15,6 @@ import xyz.morphia.query.Query;
 
 import java.util.List;
 import java.util.Set;
-import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Component
@@ -46,18 +45,18 @@ public class FeatureViewAccess {
     }
 
     public List<FeatureListItem> getFeatureListItems(
-        final Consumer<FeatureQuery> preparator,
+        final FeatureQuery q,
         final TagSelection tagSelection,
         final boolean withStats
     ) {
-        Consumer<FeatureQuery> updatedPreparator = preparator;
+        FeatureQuery queryWithFeatureIds = q;
 
         if (tagSelection.isActive()) {
             final Set<String> featureIdsForTags = scenarioViewAccess.getFeatureIdsForTags(tagSelection);
-            updatedPreparator = updatedPreparator.andThen(q -> q.withIdIn(featureIdsForTags));
+            queryWithFeatureIds = queryWithFeatureIds.withIdIn(featureIdsForTags);
         }
 
-        final Query<Feature> query = featureDAO.prepareTypedQuery(updatedPreparator)
+        final Query<Feature> query = featureDAO.query(queryWithFeatureIds)
             .project("testRunId", true)
             .project("info", true)
             .project("group", true)
@@ -68,20 +67,22 @@ public class FeatureViewAccess {
                 final FeatureListItem item = featureToListItemMapper.map(feature);
 
                 if (withStats || tagSelection.isActive()) {
-                    final ScenarioStats stats = scenarioViewAccess.getStats(q -> q.withFeatureId(feature.getId()).withSelectedTags(tagSelection));
+                    final var sq = new ScenarioQuery().withFeatureId(feature.getId()).withSelectedTags(tagSelection);
+                    final ScenarioStats stats = scenarioViewAccess.getStats(sq);
                     item.setStatus(stats.computeFeatureStatus());
                     item.setStats(stats);
                 }
                 return item;
             })
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public List<FeatureHistoryItem> getFeatureHistory(final String featureKey) {
-        return testRunRepository.query(TestRunQuery::orderByLatestFirst)
+        return testRunRepository.query(new TestRunQuery().sortByLatestFirst())
             .stream()
             .flatMap(testRun -> {
-                final Feature feature = featureDAO.prepareTypedQuery(q -> q.withTestRunId(testRun.getId()).withFeatureKey(featureKey))
+                final FeatureQuery q = new FeatureQuery().withTestRunId(testRun.getId()).withFeatureKey(featureKey);
+                final Feature feature = featureDAO.query(q)
                     .project("status", true)
                     .get();
 
@@ -89,7 +90,8 @@ public class FeatureViewAccess {
                     return Stream.empty();
                 }
 
-                final ScenarioStats stats = scenarioViewAccess.getStats(q -> q.withFeatureId(feature.getId()));
+                final var sq = new ScenarioQuery().withFeatureId(feature.getId());
+                final ScenarioStats stats = scenarioViewAccess.getStats(sq);
 
                 final FeatureHistoryItem item = featureToHistoryItemMapper.map(feature);
                 item.setTestRun(testRun);
@@ -97,7 +99,7 @@ public class FeatureViewAccess {
 
                 return Stream.of(item);
             })
-            .collect(Collectors.toList());
+            .toList();
     }
 
 }
