@@ -1,6 +1,7 @@
 package io.zucchiniui.backend.testrun.views;
 
 import com.google.common.collect.Sets;
+import io.zucchiniui.backend.scenario.dao.ScenarioQuery;
 import io.zucchiniui.backend.scenario.views.ScenarioListItemView;
 import io.zucchiniui.backend.scenario.views.ScenarioStats;
 import io.zucchiniui.backend.scenario.views.ScenarioViewAccess;
@@ -12,8 +13,6 @@ import io.zucchiniui.backend.testrun.domain.TestRunRepository;
 import org.springframework.stereotype.Component;
 
 import java.util.*;
-import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 @Component
 public class TestRunViewAccess {
@@ -38,37 +37,40 @@ public class TestRunViewAccess {
         this.testRunToListItemMapper = testRunToListItemMapper;
     }
 
-    public List<TestRunListItem> getTestRunListItems(final Consumer<TestRunQuery> preparator, final boolean withStats) {
-        return MorphiaUtils.streamQuery(testRunDAO.prepareTypedQuery(preparator))
+    public List<TestRunListItem> getTestRunListItems(final TestRunQuery testRunQuery, final boolean withStats) {
+        return MorphiaUtils.streamQuery(testRunDAO.query(testRunQuery))
             .map(testRun -> {
                 final TestRunListItem item = testRunToListItemMapper.map(testRun);
                 if (withStats) {
-                    final ScenarioStats stats = scenarioViewAccess.getStats(q -> q.withTestRunId(item.getId()));
+                    final var q = new ScenarioQuery().withTestRunId(item.getId());
+                    final ScenarioStats stats = scenarioViewAccess.getStats(q);
                     item.setStats(stats);
                 }
                 return item;
             })
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public TestRunScenarioDiff getScenarioDiff(final String leftTestRunId, final String rightTestRunId) {
         final TestRun leftTestRun = testRunRepository.getById(leftTestRunId);
         final TestRun rightTestRun = testRunRepository.getById(rightTestRunId);
 
-        final Map<String, ScenarioListItemView> leftScenarii = scenarioViewAccess.getScenarioListItemsGroupedByScenarioKey(q -> q.withTestRunId(leftTestRunId));
-        final Map<String, ScenarioListItemView> rightScenarii = scenarioViewAccess.getScenarioListItemsGroupedByScenarioKey(q -> q.withTestRunId(rightTestRunId));
+        final var leftQuery = new ScenarioQuery().withTestRunId(leftTestRunId);
+        final var rightQuery = new ScenarioQuery().withTestRunId(rightTestRunId);
+        final Map<String, ScenarioListItemView> leftScenarii = scenarioViewAccess.getScenarioListItemsGroupedByScenarioKey(leftQuery);
+        final Map<String, ScenarioListItemView> rightScenarii = scenarioViewAccess.getScenarioListItemsGroupedByScenarioKey(rightQuery);
 
         final Set<String> newScenarioFeatureKeys = Sets.difference(rightScenarii.keySet(), leftScenarii.keySet());
         final List<ScenarioListItemView> newScenarii = newScenarioFeatureKeys.stream()
             .map(rightScenarii::get)
             .sorted(Comparator.comparing(item -> item.getInfo().getName()))
-            .collect(Collectors.toList());
+            .toList();
 
         final Set<String> deletedScenarioFeatureKeys = Sets.difference(leftScenarii.keySet(), rightScenarii.keySet());
         final List<ScenarioListItemView> deletedScenarii = deletedScenarioFeatureKeys.stream()
             .map(leftScenarii::get)
             .sorted(Comparator.comparing(item -> item.getInfo().getName()))
-            .collect(Collectors.toList());
+            .toList();
 
         final Set<String> commonFeatureKeys = Sets.intersection(leftScenarii.keySet(), rightScenarii.keySet());
 
@@ -84,8 +86,8 @@ public class TestRunViewAccess {
                 return null;
             })
             .filter(Objects::nonNull)
-            .sorted(Comparator.comparing(d -> d.getLeft().getInfo().getName()))
-            .collect(Collectors.toList());
+            .sorted(Comparator.comparing(d -> d.left().getInfo().getName()))
+            .toList();
 
         final TestRunScenarioDiff diff = new TestRunScenarioDiff();
         diff.setLeftTestRun(leftTestRun);
